--- a/longer-answers.html
+++ b/longer-answers.html
@@ -41,7 +41,7 @@
             fetch(apiUrl)
                 .then(response => response.json())
                 .then(articles => {
-                    articles.forEach(article => {
+                    let allArticlePromises = articles.map(article => {
                         const featuredMediaId = article.featured_media;
                         const title = article.title.rendered;
                         const content = article.content.rendered;
@@ -53,112 +53,104 @@
                                 .then(response => response.json());
                         });
 
-                        Promise.all(tagsPromises)
+                        return Promise.all(tagsPromises)
                             .then(tagsData => {
                                 const tagsHtml = tagsData.map(tag => {
+                                    allTags.add(tag);
                                     return `<span class="badge bg-secondary">${tag.name}</span>`;
                                 }).join(' ');
 
-                                tagsData.forEach(tag => allTags.add(tag));
-
                                 if (featuredMediaId) {
-                                    fetch(`https://wp.explainit.app/wp-json/wp/v2/media/${featuredMediaId}`)
+                                    return fetch(`https://wp.explainit.app/wp-json/wp/v2/media/${featuredMediaId}`)
                                         .then(response => response.json())
                                         .then(media => {
                                             const imageUrl = media.source_url;
                                             appendArticle(id, imageUrl, title, content, tagsHtml, tags);
-                                        })
-                                        .catch(error => {
-                                            console.error("Error fetching media:", error);
                                         });
                                 } else {
                                     appendArticle(id, '', title, content, tagsHtml, tags);
                                 }
-                            })
-                            .catch(error => {
-                                console.error("Error fetching tags:", error);
                             });
-                    });
-                })
-                .catch(error => {
-                    console.error("Error fetching articles:", error);
-                });
+                        });
 
-                Promise.all(tagsPromises).then(() => {
-                    const tags = Array.from(allTags);
-                    const tagFiltersContainer = $('#tag-filters');
+return Promise.all(allArticlePromises);
+})
+.then(() => {
+const tags = Array.from(allTags);
+const tagFiltersContainer = $('#tag-filters');
 
-                    // Add "All tags" filter
-                    tagFiltersContainer.append('<span class="badge bg-primary filter-tag" data-tag-id="all">All tags</span>');
-                    tags.forEach(tag => {
-                        const tagHtml = `<span class="badge bg-secondary filter-tag" data-tag-id="${tag.id}">${tag.name}</span>`;
-                        tagFiltersContainer.append(tagHtml);
-                    });
+// Add "All tags" filter
+tagFiltersContainer.append('<span class="badge bg-primary filter-tag" data-tag-id="all">All tags</span>');
 
-                    // Add click event listener for filter tags
-                    $('.filter-tag').click(function() {
-                        $('.filter-tag').removeClass('bg-primary').addClass('bg-secondary');
-                        $(this).addClass('bg-primary').removeClass('bg-secondary');
+tags.forEach(tag => {
+    const tagHtml = `<span class="badge bg-secondary filter-tag" data-tag-id="${tag.id}">${tag.name}</span>`;
+    tagFiltersContainer.append(tagHtml);
+});
 
-                        const selectedTagId = $(this).data('tag-id');
+// Add click event listener for filter tags
+$('.filter-tag').click(function() {
+    $('.filter-tag').removeClass('bg-primary').addClass('bg-secondary');
+    $(this).addClass('bg-primary').removeClass('bg-secondary');
+    const selectedTagId = $(this).data('tag-id');
 
-                        if (selectedTagId === 'all') {
-                            $('.card').parent().show();
-                        } else {
-                            $('.card').each(function() {
-                                const card = $(this);
-                                const cardTags = card.data('article-tags');
-                                // Check if the current tag is included in the card tags
-                                const tagIncluded = cardTags.includes(selectedTagId);
+    if (selectedTagId === 'all') {
+        $('.card').parent().show();
+    } else {
+        $('.card').each(function() {
+            const card = $(this);
+            const cardTags = card.data('article-tags');
 
-                                if (tagIncluded) {
-                                    card.parent().show();
-                                } else {
-                                    card.parent().hide();
-                                }
-                            });
-                        }
-                    });
-                })
-                .catch(error => {
-                    console.error("Error fetching tags:", error);
-                });
+            // Check if the current tag is included in the card tags
+            const tagIncluded = cardTags.includes(selectedTagId);
 
-            function appendArticle(id, imageUrl, title, content, tagsHtml, tags) {
-                const cardHtml = `
-                <div class="col-md-4 mb-3">
-                    <div class="card h-100" data-article-id="${id}" data-article-content="${content}" data-article-tags="${tags}" data-bs-toggle="modal" data-bs-target="#articleModal">
-                        <img src="${imageUrl}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">${title}</h5>
-                            <p class="card-text">${content.substring(0, 100)}...</p>
-                        </div>
-                        <div class="card-footer">
-                            ${tagsHtml}
-                        </div>
-                    </div>
-                </div>
-                `;
-                $("#articles-container").append(cardHtml);
+            if (tagIncluded) {
+                card.parent().show();
+            } else {
+                card.parent().hide();
             }
-
-            // Display article content in the modal
-            $('#articleModal').on('show.bs.modal', function (event) {
-                const articleCard = $(event.relatedTarget); // Card element that triggered the modal
-                const id = articleCard.data('article-id'); // Extract the article ID from the card
-                const imageUrl = articleCard.find('.card-img-top').attr('src');
-                const title = articleCard.find('.card-title').text();
-                const content = articleCard.data('article-content');
-
-                const modal = $(this);
-                modal.find('.modal-title').text(title);
-                modal.find('#articleModalImage').attr('src', imageUrl);
-                modal.find('#articleContent').html(content);
-            });
         });
-    </script>
+    }
+});
+})
+.catch(error => {
+console.error("Error fetching articles:", error);
+});
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+function appendArticle(id, imageUrl, title, content, tagsHtml, tags) {
+const cardHtml = `
+<div class="col-md-4 mb-3">
+<div class="card h-100" data-article-id="${id}" data-article-content="${content}" data-article-tags="${tags}" data-bs-toggle="modal" data-bs-target="#articleModal">
+    <img src="${imageUrl}" class="card-img-top" alt="...">
+    <div class="card-body">
+        <h5 class="card-title">${title}</h5>
+        <p class="card-text">${content.substring(0, 100)}...</p>
+    </div>
+    <div class="card-footer">
+        ${tagsHtml}
+    </div>
+</div>
+</div>
+`;
+$("#articles-container").append(cardHtml);
+}
+
+// Display article content in the modal
+$('#articleModal').on('show.bs.modal', function (event) {
+const articleCard = $(event.relatedTarget); // Card element that triggered the modal
+const id = articleCard.data('article-id'); // Extract the article ID from the card
+const imageUrl = articleCard.find('.card-img-top').attr('src');
+const title = articleCard.find('.card-title').text();
+const content = articleCard.data('article-content');
+
+const modal = $(this);
+modal.find('.modal-title').text(title);
+modal.find('#articleModalImage').attr('src', imageUrl);
+modal.find('#articleContent').html(content);
+});
+});
+</script>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
