--- a/longer-answers.html
+++ b/longer-answers.html
@@ -124,8 +124,8 @@ function appendArticle(id, imageUrl, title, content, tagsHtml, tags) {
             <div class="card h-100" data-article-id="${id}" data-article-content="${encodedContent}" data-article-tags='${JSON.stringify(tags)}' data-bs-toggle="modal" data-bs-target="#articleModal">
                 <img src="${imageUrl}" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">${title}</h5>
-                    <p class="card-text">${content.substring(0, 100)}...</p>
+                    <h5> class="card-title">${title}</h5>
+                    <p> class="card-text">${content.substring(0, 100)}...</p>
                 </div>
                 <div class="card-footer">
                     ${tagsHtml}
